autossh-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: autossh-host
spec:
  selector:
    matchLabels:
      app: autossh-host
  template:
    metadata:
      labels:
        app: autossh-host
    spec:
      hostNetwork: true
      serviceAccountName: ssh-key-creator
      containers:
      - name: autossh
        image: jnovack/autossh:latest
        volumeMounts:
        - name: ssh-key
          mountPath: /id_rsa
          subPath: id_rsa
          readOnly: true
        securityContext:
          runAsUser: 0
      volumes:
      - name: ssh-key
        secret:
          secretName: ssh-key
          defaultMode: 0600
