autossh-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autossh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autossh
  template:
    metadata:
      labels:
        app: autossh
    spec:
      serviceAccountName: ssh-key-creator
      containers:
      - name: autossh
        image: jnovack/autossh:latest
        ports:
        - containerPort: 2049
          name: nfs
        volumeMounts:
        - name: ssh-key
          mountPath: /id_rsa
          subPath: id_rsa
          readOnly: true
        securityContext:
          runAsUser: 0
      volumes:
      - name: ssh-key
        secret:
          secretName: ssh-key
          defaultMode: 0600
---
apiVersion: v1
kind: Service
metadata:
  name: autossh-service
spec:
  selector:
    app: autossh
  ports:
  - port: 2049
    targetPort: 2049
    name: nfs
